--- a/estilos/header.css
+++ b/estilos/header.css
@@ -66,7 +66,7 @@
 }
 
 .fa-solid:hover{
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
 
 .navegation{
@@ -119,11 +119,18 @@
   }
 }
 
+@media (width >= 600px) {
+  .header-mobile{
+    display: none;
+  }
+}
+
+
 /* estilos header mobile */
 
 .header-mobile{
   height: 12rem;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .search-mobile{
@@ -176,12 +183,11 @@
   padding: 2rem 0;
   top: -80px;
   z-index: -100;
+  transition: top 0.5s ease;
 }
 
 /* animacion scroll */
-.search-mobile > :last-child:hover {
 
-}
 
 /* termino animacion */
 .nav-rrss > .rrss{
@@ -196,4 +202,9 @@
   font-size: 1.3rem;
   font-weight: bold;
   text-transform: capitalize;
+  transition: transform 0.5s ease;
+}
+
+.nav-rrss > :nth-child(2):hover, :nth-child(3):hover, :nth-child(4):hover, :nth-child(5):hover{
+  transform: scale(1.2);
 }
