--- a/estilos/header.css
+++ b/estilos/header.css
@@ -142,6 +142,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem 0;
+  z-index: 100;
   
 }
 
@@ -178,20 +179,23 @@
 
 /* scrol nav */
 
-.nav-rrss{
+.cont-nav-rrss{
   position: absolute;
   width: 100%;
   height: 20rem;
   background-color: rgb(255, 0, 0);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
   padding: 2rem 0;
   z-index: -1;
   transition: top 0.5s ease;
 }
 
+.nav-rrss{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
 /* animacion scroll */
 
 
@@ -210,6 +214,7 @@
   text-transform: capitalize;
   transition: transform 0.5s ease;
   cursor: pointer;
+
 }
 
 .enlace:hover{
