--- a/estilos/footer.css
+++ b/estilos/footer.css
@@ -1,5 +1,5 @@
 .footer-wrap{
-  width: 100vw;
+  /* width: 100vw; */
   background-color: blueviolet;
   display: flex;
   justify-content: space-between;
